--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=cadastro
+
+#INFORMAÇÕES PARA CONEXÃO COM O BANCO DE DADOS MYSQL
+spring.datasource.url=jdbc:mysql://localhost/cadastro_api?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#MANIPULANDO ESTRUTURAS (TABELAS)
+spring.jpa.hibernate.ddl-auto=update
