--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #MANIPULANDO ESTRUTURAS (TABELAS)
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.static-path-pattern=/static/**
